--- a/templates/about.html.twig
+++ b/templates/about.html.twig
@@ -11,7 +11,7 @@
             {{ item.title }}
             {{ item.description }}
             {{ item.content }}
-            {{ item.mediaUrl }}
+            <img src="{{ item.mediaUrl }}">
 
 
             {% endfor %}
