--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -2,7 +2,7 @@
 <div class="container">
     <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
         <div class="col mb-3">
-            <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none"><img src="{{ asset('Logo_C.png') }}"></a>
+            <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none"><img src="{{ asset('Logo_T.png') }}"></a>
             <p class="text-body-secondary">&copy; 2023</p>
         </div>
 
@@ -13,33 +13,27 @@
         <div class="col mb-3">
             <h5>Coordonnées</h5>
             <ul class="nav flex-column">
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
+                <li class="nav-item mb-2"><a href="tel:+33385590487" class="nav-link p-0 text-body-secondary">03 85 59 04 87</a></li>
+                <li class="nav-item mb-2"><a href="tel:+33677658774" class="nav-link p-0 text-body-secondary">06 77 65 87 74</a></li>
+                <li class="nav-item mb-2"><a href="mailto:la.clunysoise@orange.fr" class="nav-link p-0 text-body-secondary">la.clunysoise@orange.fr</a></li>
+                <li class="nav-item mb-2"><a href="geo:0,0?q=7+Avn.Pierre+le+Vénérable,71250+Cluny" class="nav-link p-0 text-body-secondary">7 Avn.Pierre le Vénérable, 71250 Cluny</a>
+</li>
             </ul>
         </div>
 
         <div class="col mb-3">
             <h5>Réseaux sociaux</h5>
             <ul class="nav flex-column">
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
+
             </ul>
         </div>
 
         <div class="col mb-3">
             <h5>Numéros d'Urgences</h5>
             <ul class="nav flex-column">
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
+                <li class="nav-item mb-2"><a href="https://www.service-public.fr/particuliers/vosdroits/F33954" class="nav-link p-0 text-body-secondary">Samu : 15</a></li>
+                <li class="nav-item mb-2 "><a href="https://www.service-public.fr/particuliers/vosdroits/F33954" class="nav-link p-0 text-body-secondary">Pompier : 18</a></li>
+                <li class="nav-item mb-2"><a href="https://www.service-public.fr/particuliers/vosdroits/F33954" class="nav-link p-0 text-body-secondary">Police Secours : 17</a></li>
             </ul>
         </div>
     </footer>
