--- a/templates/home/accueil.html.twig
+++ b/templates/home/accueil.html.twig
@@ -1,5 +1,10 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+    {{ encore_entry_link_tags('app') }}
+{% endblock %}
+
+
 {% block header %}
 
 
@@ -8,17 +13,25 @@
 
 {% block body %}
 
+
+  <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary my-5">
+    <div class="col-lg-12 px-0">
+      <h1 class="display-4 fst-italic text-center">La Clunysoise</h1>
+      <p class="lead my-3">L’entreprise « La Clunysoise » est une société d’ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d’interventions d’urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d’appel 15.</p>
+    </div>
+  </div>
+
+<section class="container">
     <div class="row">
-        <h1 class="col-12 text-center  mt-3 mb-5">La Clunysoise</h1>
+        <h1 class="col-12 text-center"></h1>
     </div>
 
-
-    <div class="row  p-2">
-        <h2 class="  text-center col-12 my-3">Actus</h2>
+    <div class="row">
+        <h2 class="col-12 text-center">Actus</h2>
 
         <p class="col-12 col-md-10 offset-md-1 text-center my-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut commodi consequatur, cupiditate, dolor dolorum est, explicabo in iste mollitia natus necessitatibus odio officia possimus quasi quia quibusdam ratione reiciendis sed sequi soluta suscipit unde vel veritatis voluptate? Aperiam dolorem porro quo ut voluptas.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut commodi consequatur, cupiditate, dolor dolorum est, explicabo in iste mollitia natus necessitatibus odio officia possimus quasi quia quibusdam ratione reiciendis sed sequi soluta suscipit unde vel veritatis voluptate? Aperiam dolorem porro quo ut voluptas.</p>
     </div>
-
+</section>
 
     <main class="main pt-4">
         <section class="container">
@@ -44,9 +57,9 @@
                                 </div>
                           
                                 <div class="card-footer  text-muted py-2 fw-normal">
-                                    Publié le <span class="text-warning-emphasis">{{ posts.createdAt|date('d/m/Y à H\\hi') }}</span>
+                                    Publié le <span class="text-warning-emphasis">{{ posts.createdAt|date('d/m/Y à H\\hi') }}</span><br/>
                                     {% if posts.updatedAt %}
-                                        et modifié le <span class="text-warning">{{ posts.updatedAt|date('d/m/Y à H\\hi') }}</span>
+                                        Modifié le <span class="text-warning-emphasis">{{ posts.updatedAt|date('d/m/Y à H\\hi') }}</span>
                                     {% endif %}
                                 </div>
                             </div>
@@ -64,35 +77,37 @@
     </main>
 
 {# -------------------------------- DISPOSITIO 2 -------------------------------- #}
-
-{# <main class="main pt-4">
+{# <div class="pt-4">
     <section class="container">
         <div class="row">
+            {% for posts in post %}
+                <div class="col-md-4">
 
-            <div class="col-md-6">
-                <article class="card mb-4">
-                        {% for posts in posts %}
+                        <article class="card mb-4" id="art1">
 
-                        <header class="card-header">
-                            <h1>{{ posts.title }}</h1>
-                            {{ posts.description | striptags }}
-                        </header>
+                            <div class="card-header  text-uppercase">
+                                <h1>{{ posts.title }}</h1>
+                            </div>
 
-                        <img src="upload/images/{{ asset(posts.mediaUrl) }}"> 
-                        <p>{{ posts.content | striptags }}</p>
+                            <div class="card-body d-flex justify-content-center align-content-center">
+                                <img src="upload/images/{{ asset(posts.mediaUrl) }}">
+                            </div>
+                                <p class="mx-4">{{ posts.description | striptags }}</p>
+                        
+                            <div class="card-footer  text-muted py-2 fw-normal">
+                                Publié le <span class="text-warning-emphasis">{{ posts.createdAt|date('d/m/Y à H\\hi') }}</span><br/>
+                                {% if posts.updatedAt %}
+                                    Modifié le <span class="text-warning-emphasis">{{ posts.updatedAt|date('d/m/Y à H\\hi') }}</span>
+                                {% endif %}
+                            </div>
 
-                        <div class="card-footer">
-                            Publié le <span>{{ posts.createdAt|date('d/m/Y à H\\hi') }}</span>
-                        </div>
+                        </article>
 
-                        {% endfor %}
-                </article>
-            </div>
-
+                </div>
+            {% endfor %}  
         </div>
     </section>
-</main> #}
-
+</div> #}
 {% endblock %} 
 
 {% block footer %}
