--- a/templates/home/accueil.html.twig
+++ b/templates/home/accueil.html.twig
@@ -33,7 +33,8 @@
     </div>
 </section>
 
-    <main class="main pt-4">
+{# -------------------------------- DISPOSITIO 1 -------------------------------- #}
+    {# <main class="main pt-4">
         <section class="container">
             <div class="row">
 
@@ -47,8 +48,9 @@
                         <div class="col-6">
 
                             <div class="card my-3 bg-body-tertiary">
-                                <div class="card-header  text-uppercase">
-                                    <h1>{{ posts.title }}</h1>
+                                <div class="card-header text-center py-2">
+                                    <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}">{{ posts.title }}
+                                    </a>
                                 </div>
 
                                 <div class="card-body">
@@ -56,7 +58,7 @@
                                     <p>{{ posts.description | striptags }}</p>
                                 </div>
                           
-                                <div class="card-footer  text-muted py-2 fw-normal">
+                                <div class="card-footer text-muted py-2">
                                     Publié le <span class="text-warning-emphasis">{{ posts.createdAt|date('d/m/Y à H\\hi') }}</span><br/>
                                     {% if posts.updatedAt %}
                                         Modifié le <span class="text-warning-emphasis">{{ posts.updatedAt|date('d/m/Y à H\\hi') }}</span>
@@ -74,10 +76,10 @@
 
             </div>
         </section>
-    </main>
+    </main> #}
 
 {# -------------------------------- DISPOSITIO 2 -------------------------------- #}
-{# <div class="pt-4">
+<div class="pt-4">
     <section class="container">
         <div class="row">
             {% for posts in post %}
@@ -85,8 +87,8 @@
 
                         <article class="card mb-4" id="art1">
 
-                            <div class="card-header  text-uppercase">
-                                <h1>{{ posts.title }}</h1>
+                            <div class="card-header text-uppercase text-center">
+                                <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}">{{ posts.title }}</a>
                             </div>
 
                             <div class="card-body d-flex justify-content-center align-content-center">
@@ -94,7 +96,7 @@
                             </div>
                                 <p class="mx-4">{{ posts.description | striptags }}</p>
                         
-                            <div class="card-footer  text-muted py-2 fw-normal">
+                            <div class="card-footer text-muted text-center py-2 fw-normal">
                                 Publié le <span class="text-warning-emphasis">{{ posts.createdAt|date('d/m/Y à H\\hi') }}</span><br/>
                                 {% if posts.updatedAt %}
                                     Modifié le <span class="text-warning-emphasis">{{ posts.updatedAt|date('d/m/Y à H\\hi') }}</span>
@@ -107,7 +109,7 @@
             {% endfor %}  
         </div>
     </section>
-</div> #}
+</div>
 {% endblock %} 
 
 {% block footer %}
