--- a/templates/home/accueil.html.twig
+++ b/templates/home/accueil.html.twig
@@ -12,14 +12,54 @@
 
 
 {% block body %}
-
-
-  <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary my-5">
-    <div class="col-lg-12 px-0">
-      <h1 class="display-4 fst-italic text-center">La Clunysoise</h1>
-      <p class="lead my-3">L’entreprise « La Clunysoise » est une société d’ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d’interventions d’urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d’appel 15.</p>
+    <div class="container text-center">
+        <span><span class="count">421 </span> interventions / jours </span>
+        <span><span class="count">245 </span> urgences / jours </span>
+        <span><span class="count">23 </span> Salariés </span>
+        <span><span class="count">5 </span> Ambulances </span>
+        <span><span class="count">7 </span> VSL </span>
+        <span><span class="count">4 </span> taxi </span>
     </div>
-  </div>
+<section class="container">
+    <div class="row text-body-emphasis bg-body-secondary text-center">
+
+            <div class="row col-lg-6 d-flex justify-content-center align-content-center">
+                <h1 class="display-4 fst-italic">La Clunysoise</h1>
+                <p class="lead my-3">L’entreprise « La Clunysoise » est une société d’ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d’interventions d’urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d’appel 15.</p>
+            </div>
+            
+            <div class="col-lg-6 d-flex justify-content-center align-content-center">
+                <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            {# <img src="{{ asset('constante-lim-OUzlEF2FcB4-unsplash.jpg') }}" class="d-block w-100" alt="..."> #}
+                            <p>Ambulances</p>
+                        </div>
+                        <div class="carousel-item">
+                            {# <img src="{{ asset('mat-napo-5K5gyPvKC80-unsplash.jpg') }}" class="d-block w-100" alt="..."> #}
+                            <p>VSL</p>
+                        </div>
+                        <div class="carousel-item">
+                            {# <img src="{{ asset('mat-napo-ejWJ3a92FEs-unsplash.jpg') }}" class="d-block w-100" alt="..."> #}
+                            <p>Taxi</p>
+                        </div>
+                    </div>
+
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>   
+                </div>
+            </div>
+            
+
+    </div>
+</section>
 
 <section class="container">
     <div class="row">
@@ -29,7 +69,6 @@
     <div class="row">
         <h2 class="col-12 text-center">Actus</h2>
 
-        <p class="col-12 col-md-10 offset-md-1 text-center my-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut commodi consequatur, cupiditate, dolor dolorum est, explicabo in iste mollitia natus necessitatibus odio officia possimus quasi quia quibusdam ratione reiciendis sed sequi soluta suscipit unde vel veritatis voluptate? Aperiam dolorem porro quo ut voluptas.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut commodi consequatur, cupiditate, dolor dolorum est, explicabo in iste mollitia natus necessitatibus odio officia possimus quasi quia quibusdam ratione reiciendis sed sequi soluta suscipit unde vel veritatis voluptate? Aperiam dolorem porro quo ut voluptas.</p>
     </div>
 </section>
 
@@ -86,23 +125,26 @@
                 <div class="col-md-4">
 
                         <article class="card mb-4" id="art1">
-
-                            <div class="card-header text-uppercase text-center">
-                                <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}">{{ posts.title }}</a>
-                            </div>
+                            <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}">
+                            
+                            {# <div class="card-header text-uppercase text-center">
+                                {{ posts.title }}
+                            </div> #}
 
                             <div class="card-body d-flex justify-content-center align-content-center">
                                 <img src="upload/images/{{ asset(posts.mediaUrl) }}">
                             </div>
-                                <p class="mx-4">{{ posts.description | striptags }}</p>
+                            
+                            <p class="mx-4 text-center">{{ posts.description | striptags }}</p>
                         
-                            <div class="card-footer text-muted text-center py-2 fw-normal">
+                            {# <div class="card-footer text-muted text-center py-2 fw-normal">
                                 Publié le <span class="text-warning-emphasis">{{ posts.createdAt|date('d/m/Y à H\\hi') }}</span><br/>
                                 {% if posts.updatedAt %}
                                     Modifié le <span class="text-warning-emphasis">{{ posts.updatedAt|date('d/m/Y à H\\hi') }}</span>
                                 {% endif %}
-                            </div>
+                            </div> #}
 
+                            </a>
                         </article>
 
                 </div>
