--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -21,21 +21,10 @@
             </ul>
         </div>
 
-        <div class="col mb-3">
-            <h5>Réseaux sociaux</h5>
-            <ul class="nav flex-column">
+        <div class="col mb-3"></div>
 
-            </ul>
-        </div>
-
-        <div class="col mb-3">
-            <h5>Numéros d'Urgences</h5>
-            <ul class="nav flex-column">
-                <li class="nav-item mb-2"><a href="https://www.service-public.fr/particuliers/vosdroits/F33954" class="nav-link p-0 text-body-secondary">Samu : 15</a></li>
-                <li class="nav-item mb-2 "><a href="https://www.service-public.fr/particuliers/vosdroits/F33954" class="nav-link p-0 text-body-secondary">Pompier : 18</a></li>
-                <li class="nav-item mb-2"><a href="https://www.service-public.fr/particuliers/vosdroits/F33954" class="nav-link p-0 text-body-secondary">Police Secours : 17</a></li>
-            </ul>
-        </div>
+        <div class="col mb-3"></div>
+        
     </footer>
 </div>
 {% endblock %} 
