--- a/templates/home/accueil.html.twig
+++ b/templates/home/accueil.html.twig
@@ -5,21 +5,17 @@
 {% endblock %}
 
 
-{% block header %}
-
-
-{% endblock %}
-
-
 {% block body %}
-    <div class="container text-center">
-        <span><span class="count">421 </span> interventions / jours </span>
-        <span><span class="count">245 </span> urgences / jours </span>
-        <span><span class="count">23 </span> Salariés </span>
-        <span><span class="count">5 </span> Ambulances </span>
-        <span><span class="count">7 </span> VSL </span>
-        <span><span class="count">4 </span> taxi </span>
-    </div>
+
+<div class="container text-center">
+    <span><span class="count">421 </span> interventions / jours </span>
+    <span><span class="count">245 </span> urgences / jours </span>
+    <span><span class="count">23 </span> Salariés </span>
+    <span><span class="count">5 </span> Ambulances </span>
+    <span><span class="count">7 </span> VSL </span>
+    <span><span class="count">4 </span> taxi </span>
+</div>
+
 <section class="container">
     <div class="row text-body-emphasis bg-body-secondary text-center">
 
@@ -61,99 +57,29 @@
     </div>
 </section>
 
-<section class="container">
-    <div class="row">
-        <h1 class="col-12 text-center"></h1>
-    </div>
-
-    <div class="row">
-        <h2 class="col-12 text-center">Actus</h2>
-
-    </div>
-</section>
-
-{# -------------------------------- DISPOSITIO 1 -------------------------------- #}
-    {# <main class="main pt-4">
-        <section class="container">
-            <div class="row">
-
-                <div class="row">
-                    <h2 class="col-12 text-secondary text-center mb-4">Nos {{post|length}} dernières publications</h2>
-                </div>
-
-
-                {% for posts in post %}
-
-                        <div class="col-6">
-
-                            <div class="card my-3 bg-body-tertiary">
-                                <div class="card-header text-center py-2">
-                                    <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}">{{ posts.title }}
-                                    </a>
-                                </div>
-
-                                <div class="card-body">
-                                    <img src="upload/images/{{ asset(posts.mediaUrl) }}"> 
-                                    <p>{{ posts.description | striptags }}</p>
-                                </div>
-                          
-                                <div class="card-footer text-muted py-2">
-                                    Publié le <span class="text-warning-emphasis">{{ posts.createdAt|date('d/m/Y à H\\hi') }}</span><br/>
-                                    {% if posts.updatedAt %}
-                                        Modifié le <span class="text-warning-emphasis">{{ posts.updatedAt|date('d/m/Y à H\\hi') }}</span>
-                                    {% endif %}
-                                </div>
-                            </div>
-
-                        </div>
-
-                {% else %}
-                    <div class="row">
-                        <p class="col-12 text-center alert alert-warning">Aucune publication à afficher.</p>
-                    </div>
-                {% endfor %}    
-
-            </div>
-        </section>
-    </main> #}
-
-{# -------------------------------- DISPOSITIO 2 -------------------------------- #}
-<div class="pt-4">
-    <section class="container">
-        <div class="row">
-            {% for posts in post %}
-                <div class="col-md-4">
-
-                        <article class="card mb-4" id="art1">
-                            <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}">
-                            
-                            {# <div class="card-header text-uppercase text-center">
-                                {{ posts.title }}
-                            </div> #}
-
-                            <div class="card-body d-flex justify-content-center align-content-center">
-                                <img src="upload/images/{{ asset(posts.mediaUrl) }}">
-                            </div>
-                            
-                            <p class="mx-4 text-center">{{ posts.description | striptags }}</p>
-                        
-                            {# <div class="card-footer text-muted text-center py-2 fw-normal">
-                                Publié le <span class="text-warning-emphasis">{{ posts.createdAt|date('d/m/Y à H\\hi') }}</span><br/>
-                                {% if posts.updatedAt %}
-                                    Modifié le <span class="text-warning-emphasis">{{ posts.updatedAt|date('d/m/Y à H\\hi') }}</span>
-                                {% endif %}
-                            </div> #}
-
-                            </a>
-                        </article>
-
-                </div>
-            {% endfor %}  
-        </div>
-    </section>
+<div class="row">
+    <h2 class="col-12 text-secondary text-center mb-4">Nos {{post|length}} dernières publications</h2>
 </div>
-{% endblock %} 
 
-{% block footer %}
+{% for posts in post %}
+        <div class="col-6">
+            <div class="card my-3 bg-body-tertiary">
+                <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}">
+                <div class="card-body">
+                    {% if posts.mediaUrl is not null %}
+                        <img src="upload/images/{{ asset(posts.mediaUrl) }}"> 
+                    {% endif %}
+                    <p>{{ posts.description | striptags }}</p>
+                </div>
+                </a>
+            </div>
+        </div>
+
+{% else %}
+    <div class="row">
+        <p class="col-12 text-center alert alert-warning">Aucune publication à afficher.</p>
+    </div>
+{% endfor %}    
+
 
 {% endblock %} 
