--- a/templates/home/accueil.html.twig
+++ b/templates/home/accueil.html.twig
@@ -7,6 +7,7 @@
 
 {% block body %}
 
+
 <div class="container text-center">
     <span><span class="count">421 </span> interventions / jours </span>
     <span><span class="count">245 </span> urgences / jours </span>
@@ -15,6 +16,7 @@
     <span><span class="count">7 </span> VSL </span>
     <span><span class="count">4 </span> taxi </span>
 </div>
+
 
 <section class="container">
     <div class="row text-body-emphasis bg-body-secondary text-center">
@@ -57,29 +59,29 @@
     </div>
 </section>
 
-<div class="row">
-    <h2 class="col-12 text-secondary text-center mb-4">Nos {{post|length}} dernières publications</h2>
-</div>
 
-{% for posts in post %}
-        <div class="col-6">
-            <div class="card my-3 bg-body-tertiary">
-                <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}">
-                <div class="card-body">
-                    {% if posts.mediaUrl is not null %}
-                        <img src="upload/images/{{ asset(posts.mediaUrl) }}"> 
-                    {% endif %}
-                    <p>{{ posts.description | striptags }}</p>
+<div class="pt-4">
+    <section class="container">
+        <div class="row">
+            {% for posts in post %}
+                <div class="col-md-4">
+
+                        <article class="card mb-4" id="art1">
+                            <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}">
+                                <div class="card-body d-flex justify-content-center align-content-center">
+                                    {% if posts.mediaUrl is not null %}
+                                        <img src="upload/images/{{ asset(posts.mediaUrl) }}"> 
+                                    {% endif %}
+                                </div>
+                                <p class="mx-4 text-center">{{ posts.description | striptags }}</p>
+                            </a>
+                        </article>
+
                 </div>
-                </a>
-            </div>
+            {% endfor %}  
         </div>
-
-{% else %}
-    <div class="row">
-        <p class="col-12 text-center alert alert-warning">Aucune publication à afficher.</p>
-    </div>
-{% endfor %}    
+    </section>
+</div>
 
 
 {% endblock %} 
