--- a/templates/home/accueil.html.twig
+++ b/templates/home/accueil.html.twig
@@ -5,80 +5,16 @@
 {% endblock %}
 
 
-{% block header %}
-
-
-{% endblock %}
-
-
 {% block body %}
 
 
-  <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary my-5">
+<div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary my-5">
     <div class="col-lg-12 px-0">
-      <h1 class="display-4 fst-italic text-center">La Clunysoise</h1>
-      <p class="lead my-3">L’entreprise « La Clunysoise » est une société d’ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d’interventions d’urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d’appel 15.</p>
+        <h1 class="display-4 fst-italic text-center">La Clunysoise</h1>
+        <p class="lead my-3">L’entreprise « La Clunysoise » est une société d’ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d’interventions d’urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d’appel 15.</p>
     </div>
-  </div>
+</div>
 
-<section class="container">
-    <div class="row">
-        <h1 class="col-12 text-center"></h1>
-    </div>
-
-    <div class="row">
-        <h2 class="col-12 text-center">Actus</h2>
-
-        <p class="col-12 col-md-10 offset-md-1 text-center my-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut commodi consequatur, cupiditate, dolor dolorum est, explicabo in iste mollitia natus necessitatibus odio officia possimus quasi quia quibusdam ratione reiciendis sed sequi soluta suscipit unde vel veritatis voluptate? Aperiam dolorem porro quo ut voluptas.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut commodi consequatur, cupiditate, dolor dolorum est, explicabo in iste mollitia natus necessitatibus odio officia possimus quasi quia quibusdam ratione reiciendis sed sequi soluta suscipit unde vel veritatis voluptate? Aperiam dolorem porro quo ut voluptas.</p>
-    </div>
-</section>
-
-{# -------------------------------- DISPOSITIO 1 -------------------------------- #}
-    {# <main class="main pt-4">
-        <section class="container">
-            <div class="row">
-
-                <div class="row">
-                    <h2 class="col-12 text-secondary text-center mb-4">Nos {{post|length}} dernières publications</h2>
-                </div>
-
-
-                {% for posts in post %}
-
-                        <div class="col-6">
-
-                            <div class="card my-3 bg-body-tertiary">
-                                <div class="card-header text-center py-2">
-                                    <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}">{{ posts.title }}
-                                    </a>
-                                </div>
-
-                                <div class="card-body">
-                                    <img src="upload/images/{{ asset(posts.mediaUrl) }}"> 
-                                    <p>{{ posts.description | striptags }}</p>
-                                </div>
-                          
-                                <div class="card-footer text-muted py-2">
-                                    Publié le <span class="text-warning-emphasis">{{ posts.createdAt|date('d/m/Y à H\\hi') }}</span><br/>
-                                    {% if posts.updatedAt %}
-                                        Modifié le <span class="text-warning-emphasis">{{ posts.updatedAt|date('d/m/Y à H\\hi') }}</span>
-                                    {% endif %}
-                                </div>
-                            </div>
-
-                        </div>
-
-                {% else %}
-                    <div class="row">
-                        <p class="col-12 text-center alert alert-warning">Aucune publication à afficher.</p>
-                    </div>
-                {% endfor %}    
-
-            </div>
-        </section>
-    </main> #}
-
-{# -------------------------------- DISPOSITIO 2 -------------------------------- #}
 <div class="pt-4">
     <section class="container">
         <div class="row">
@@ -86,23 +22,16 @@
                 <div class="col-md-4">
 
                         <article class="card mb-4" id="art1">
-
-                            <div class="card-header text-uppercase text-center">
-                                <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}">{{ posts.title }}</a>
-                            </div>
+                            <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}">
 
                             <div class="card-body d-flex justify-content-center align-content-center">
+                            {% if posts.mediaUrl is not null %}
                                 <img src="upload/images/{{ asset(posts.mediaUrl) }}">
+                            {% endif %}
                             </div>
-                                <p class="mx-4">{{ posts.description | striptags }}</p>
-                        
-                            <div class="card-footer text-muted text-center py-2 fw-normal">
-                                Publié le <span class="text-warning-emphasis">{{ posts.createdAt|date('d/m/Y à H\\hi') }}</span><br/>
-                                {% if posts.updatedAt %}
-                                    Modifié le <span class="text-warning-emphasis">{{ posts.updatedAt|date('d/m/Y à H\\hi') }}</span>
-                                {% endif %}
-                            </div>
+                            <p class="mx-4 text-center">{{ posts.description | striptags }}</p>
 
+                            </a>
                         </article>
 
                 </div>
@@ -110,8 +39,6 @@
         </div>
     </section>
 </div>
-{% endblock %} 
 
-{% block footer %}
 
 {% endblock %} 
