--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -18,16 +18,11 @@
                         </div>
 
                         <div class="card-body d-flex justify-content-center align-content-center">
+                        {% if post.mediaUrl is not null %}
                             <img src="upload/images/{{ asset(post.mediaUrl) }}">
+                        {% endif %}
                         </div>
                         <p class="mx-4 my-4">{{ post.content|striptags|replace({'&nbsp;': ''}) }}</p>
-                    
-                        <div class="card-footer text-muted py-2 fw-normal text-center">
-                            Publié le <span class="text-warning-emphasis-">{{ post.createdAt|date('d/m/Y à H\\hi') }}</span><br/>
-                            {% if post.updatedAt %}
-                                Modifié le <span class="text-warning-emphasis">{{ post.updatedAt|date('d/m/Y à H\\hi') }}</span>
-                            {% endif %}
-                        </div>
 
                     </article>
 
