--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -18,7 +18,7 @@
             <a class="nav-link" href="/">Accueil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about">A Propos</a>
+            <a class="nav-link" href="/a-propos">A Propos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Prise en charge</a>
