Update New Pages

--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -21,16 +21,16 @@
             <a class="nav-link" href="/a-propos">A Propos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Prise en charge</a>
+            <a class="nav-link" href="/prise-en-charge">Prise en charge</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Nous rejoindre</a>
-          </li>
-                    <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Vos rendez-vous</a>
+            <a class="nav-link" href="/nous-rejoindre">Nous rejoindre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Contacts</a>
+            <a class="nav-link" href="/vos-rendez-vous">Vos rendez-vous</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contact">Contacts</a>
           </li>
 
           {% if is_granted('ROLE_ADMIN') %}
