--- a/templates/main/support.html.twig
+++ b/templates/main/support.html.twig
@@ -2,8 +2,7 @@
 
 {% block body %}
 
-
-<h1 class="text-center"> A Propos </h1>
+<h1 class="text-center"> Prise en charge </h1>
 
 <div class="pt-4">
     <section class="container">
