--- a/templates/main/join.html.twig
+++ b/templates/main/join.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
 
-<h1 class="text-center"> A Propos </h1>
+<h1 class="text-center"> Rejoignez Nous</h1>
 
 <div class="pt-4">
     <section class="container">
