--- a/templates/main/accueil.html.twig
+++ b/templates/main/accueil.html.twig
@@ -8,37 +8,67 @@
 {% block body %}
 
 
-<div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary my-5">
-    <div class="col-lg-12 px-0">
-        <h1 class="display-4 fst-italic text-center">La Clunysoise</h1>
-        <p class="lead my-3">L’entreprise « La Clunysoise » est une société d’ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d’interventions d’urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d’appel 15.</p>
-    </div>
-</div>
+<section class="text-center">
+    <span><span class="count">1421 </span> interventions / jours </span>
+    <span><span class="count">145</span> urgences / jours </span>
+    <span><span class="count">78</span> salariés </span>
+</section>
 
-<div class="pt-4">
-    <section class="container">
-        <div class="row">
-            {% for posts in post %}
-                <div class="col-md-4">
-
-                        <article class="card mb-4" id="art1">
-                            <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}">
-
-                            <div class="card-body d-flex justify-content-center align-content-center">
-                            {% if posts.mediaUrl is not null %}
-                                <img src="upload/images/{{ asset(posts.mediaUrl) }}">
-                            {% endif %}
-                            </div>
-                            <p class="mx-4 text-center">{{ posts.description | striptags }}</p>
-
-                            </a>
-                        </article>
-
-                </div>
-            {% endfor %}  
+<section class="container">
+    <div class="row p-4 m-4 rounded text-body-emphasis bg-body-secondary">
+        <div class="col-6">
+            <h1 class="display-4 fst-italic text-center">La Clunysoise</h1>
+            <p class="lead my-3">L’entreprise « La Clunysoise » est une société d’ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d’interventions d’urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d’appel 15.</p>
         </div>
-    </section>
-</div>
+        <div class="col-6">
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner text-center my-5 py-5">
+                    <div class="carousel-item active">
+                    <h2> Ambulance </h2>
+                    </div>
+                    <div class="carousel-item">
+                    <h2> VSL </h2>
+                    </div>
+                    <div class="carousel-item">
+                    <h2> Taxi </h2>
+                    </div>
+                </div>
+
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="container">
+    <div class="row p-4 m-4 rounded">
+        {% for posts in post %}
+            <div class="col-4">
+
+                    <article class="card mb-4" id="art1">
+                        <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}">
+
+                        <div class="card-body d-flex justify-content-center align-content-center">
+                        {% if posts.mediaUrl is not null %}
+                            <img src="upload/images/{{ asset(posts.mediaUrl) }}">
+                        {% endif %}
+                        </div>
+                        <p class="mx-4 text-center">{{ posts.description | striptags }}</p>
+
+                        </a>
+                    </article>
+
+            </div>
+        {% endfor %}  
+    </div>
+</section>
 
 
 {% endblock %} 
