--- a/templates/main/accueil.html.twig
+++ b/templates/main/accueil.html.twig
@@ -9,13 +9,16 @@
 
 
 <section class="text-center">
-    <span><span class="count">1421 </span> interventions / jours </span>
-    <span><span class="count">145</span> urgences / jours </span>
-    <span><span class="count">78</span> salariés </span>
+    <span><span class="count">421 </span> interventions / jours </span>
+    <span><span class="count">45</span> urgences / jours </span>
+    <span><span class="count">28</span> salariés </span>
+    <span><span class="count">5</span> ambualnces </span>
+    <span><span class="count">10</span> VSL </span>
+    <span><span class="count">8</span> Taxi </span>
 </section>
 
 <section class="container">
-    <div class="row p-4 m-4 rounded text-body-emphasis bg-body-secondary">
+    <div class="row rounded text-body-emphasis bg-body-secondary">
         <div class="col-6">
             <h1 class="display-4 fst-italic text-center">La Clunysoise</h1>
             <p class="lead my-3">L’entreprise « La Clunysoise » est une société d’ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d’interventions d’urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d’appel 15.</p>
@@ -24,7 +27,13 @@
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner text-center my-5 py-5">
                     <div class="carousel-item active">
-                    <h2> Ambulance </h2>
+                        <div style="display: flex; justify-content: center; align-items: center;">
+                            <img src="{{ asset('Logo_C.png') }}" class="d-block w-100 center-block" alt="...">
+                        </div>
+                        <div class="carousel-caption d-none d-md-block text-dark">
+                            <h2>Ambulance</h2>
+                            <p>Some representative placeholder content for the first slide.</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
                     <h2> VSL </h2>
