--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,18 +1,10 @@
 @import "~bootstrap/scss/bootstrap";
+@import "assets/styles/login.scss";
+@import "assets/styles/home.scss";
 
-
-/* Login page gradient */
-.gradient-custom {
-    /* fallback for old browsers */
-    background: rgb(58,119,180);
-    
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: -webkit-linear-gradient(90deg, rgba(58,119,180,1) 0%, rgba(29,212,253,0) 50%, rgba(252,69,69,1) 100%);
-    
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(90deg, rgba(58,119,180,1) 0%, rgba(29,212,253,0) 50%, rgba(252,69,69,1) 100%);
+.navbar img, footer img {
+    width: 300px;
 }
-
 
 body {
     background-color: white;
@@ -21,35 +13,3 @@ body {
 p {
     color: goldenrod;
 }
-
-img {
-    width: 300px;
-}
-
-#gridGallery {
-    max-width: 100vw;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.box {
-    border: 1px solid goldenrod;
-    border-radius: 5px;
-    margin: 1rem;
-}
-
-.box img {
-    max-height: 300px;
-    margin: 10px;
-}
-   
-#boxOne {
-    width: 850px;
-    height: 400px;
-}
-
-#boxTwo {
-    width: 350px;
-    height: 400px;
-}
-  
