--- a/templates/main/accueil.html.twig
+++ b/templates/main/accueil.html.twig
@@ -22,7 +22,7 @@
             <p class="lead">L’entreprise « La Clunysoise » est une société d’ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d’interventions d’urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d’appel 15.</p>
         </div>
         
-        <div class="col-6"
+        <div class="col-6">
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
 
                 <div class="carousel-inner text-center">
