--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -4,7 +4,7 @@
 <div class="container">
     <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
         <div class="col mb-3">
-            <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none"><img src="{{ asset('Logo_T.png') }}"></a>
+            <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none"><img id="logo" src="{{ asset('Logo_T.png') }}"></a>
             <p class="text-body-secondary">&copy; 2023</p>
         </div>
 
