--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,9 +1,9 @@
 {% block header %}
 
 
-<nav class="navbar navbar-Light bg-Light" aria-label="Light offcanvas navbar">
+<nav class="navbar navbar-Light" aria-label="Light offcanvas navbar">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"><img src="{{ asset('Logo_T.png') }}"></a>
+    <a class="navbar-brand" href="/"><img id="logo" src="{{ asset('Logo_T.png') }}"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbarDark" aria-controls="offcanvasNavbarDark" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
