--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -4,7 +4,7 @@
 {% block body %}
 
 
-<section class="text-center" id="Compteur">
+<section class="text-center" id="compteur">
 
     <span><span class="count">421 </span> interventions / jours </span>
     <span><span class="count">45</span> urgences / jours </span>
@@ -15,7 +15,7 @@
 
 </section>
 
-<section class="container w-100" id="FirstScreen">
+<section class="container w-100" id="firstScreen">
     <div class="row">
         <div class="col-6">
             <h1 class="display-4 fst-italic text-center">La Clunysoise</h1>
