--- a/assets/app.scss
+++ b/assets/app.scss
@@ -1,15 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
-@import "assets/styles/login.scss";
-@import "assets/styles/home.scss";
-
-.navbar img, footer img {
-    width: 300px;
-}
-
-body {
-    background-color: white;
-}
-
-p {
-    color: goldenrod;
-}
+@import "assets/styles/_theme.scss";
+@import "assets/styles/_login.scss";
+@import "assets/styles/_home.scss";
+@import "assets/styles/_header.scss";
