--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -1,8 +1,8 @@
-#FirstScreen {
+#firstScreen {
     width: 100%;
 }
 
-body #Compteur {
+body #compteur {
     font-size: 30px!important;
     margin: 3rem;
 }
@@ -33,7 +33,7 @@ body #Compteur {
 }
 
 @media (min-width: 1400px) {
-    #FirstScreen {
+    #firstScreen {
         max-width: 100vw;
         height: 100vh;
     }
